--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -4,24 +4,25 @@ import HeaderLink from './HeaderLink.astro';
 ---
 
 <header
-  class="flex flex-col sm:flex-row sm:justify-between sm:gap-6 py-4 sticky top-0 bg-white dark:bg-black"
+  class="flex flex-col sm:flex-row sm:justify-between sm:gap-6 py-4 sticky top-0 bg-slate-100/20 dark:bg-black/80 backdrop-blur-sm shadow-sm"
 >
-  <div class="flex justify-between sm:gap-4">
+  <div class="flex justify-between sm:gap-4 px-4">
+    <HeaderLink href="/">Home</HeaderLink>
     {basePages.map((link) => <HeaderLink href={link} />)}
-    <HeaderLink href="/resume.pdf">/resume</HeaderLink>
+    <HeaderLink href="/resume.pdf">Resume</HeaderLink>
   </div>
-  <div class="flex justify-between text-3xl sm:text-xl sm:gap-4">
-    <HeaderLink href="https://github.com/jsun969">
+  <div class="flex justify-between text-3xl sm:text-xl sm:gap-4 px-4">
+    <HeaderLink href="https://github.com/ZuxingGit">
       <i class="ri-github-fill"></i>
     </HeaderLink>
-    <HeaderLink href="https://twitter.com/jsun969">
+    <!-- <HeaderLink href="https://twitter.com/jsun969">
       <i class="ri-twitter-fill"></i>
+    </HeaderLink> -->
+    <HeaderLink href="https://www.linkedin.com/in/zuxingwu">
+      <i class="ri-linkedin-box-fill"></i>
     </HeaderLink>
     <HeaderLink href="https://discord.gg/Q7xZVtF6pF">
       <i class="ri-discord-fill"></i>
-    </HeaderLink>
-    <HeaderLink href="https://www.linkedin.com/in/jsun969">
-      <i class="ri-linkedin-box-fill"></i>
     </HeaderLink>
     <HeaderLink href="/blog.xml">
       <i class="ri-rss-fill"></i>
