Tab label changed

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -31,7 +31,7 @@ const {
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="icon" type="image/png" href="/favicon.png" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="generator" content={Astro.generator} />
     <title>{title ? `${title} - ${SITE_NAME}` : SITE_NAME}</title>
     <SEO
@@ -42,7 +42,7 @@ const {
           type: 'website',
           image: HEADER_IMAGE,
         },
-        image: { alt: 'Jsun Dot LOL Header Image' },
+        image: { alt: 'Zuxing Blog Header Image' },
         optional: { description, siteName: SITE_NAME },
         article: {
           authors: article && ['Justin Sun'],
