--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -4,7 +4,7 @@ import HeaderLink from './HeaderLink.astro';
 ---
 
 <header
-  class="flex flex-col sm:flex-row sm:justify-between sm:gap-6 py-4 sticky top-0 bg-slate-100/20 dark:bg-black/80 backdrop-blur-sm shadow-sm"
+  class="flex flex-col sm:flex-row sm:justify-between sm:gap-6 py-4 sticky top-0 bg-blue-400 dark:bg-black/80 backdrop-blur-sm shadow-sm"
 >
   <div class="flex justify-between sm:gap-4 px-4">
     <HeaderLink href="/">Home</HeaderLink>
@@ -21,9 +21,9 @@ import HeaderLink from './HeaderLink.astro';
     <HeaderLink href="https://www.linkedin.com/in/zuxingwu">
       <i class="ri-linkedin-box-fill"></i>
     </HeaderLink>
-    <HeaderLink href="https://discord.gg/Q7xZVtF6pF">
+    <!-- <HeaderLink href="https://discord.gg/Q7xZVtF6pF">
       <i class="ri-discord-fill"></i>
-    </HeaderLink>
+    </HeaderLink> -->
     <HeaderLink href="/blog.xml">
       <i class="ri-rss-fill"></i>
     </HeaderLink>
