--- a/src/components/blog/BlogItem.astro
+++ b/src/components/blog/BlogItem.astro
@@ -16,7 +16,7 @@ const { post } = Astro.props;
   <div class="text-2xl">
     <time
       datetime={post.data.date.toISOString()}
-      class="inline-block w-[5.5rem] text-gray-400 font-light group-hover:text-gray-800 dark:group-hover:text-gray-50 transition-colors"
+      class="inline-block w-[5.5rem] text-gray-500 font-light group-hover:text-gray-800 dark:group-hover:text-gray-50 transition-colors"
     >
       {
         post.data.date.toLocaleDateString('en', {
@@ -26,19 +26,23 @@ const { post } = Astro.props;
       }
     </time>
     <span
-      class="text-gray-500 dark:text-gray-300 group-hover:text-black dark:group-hover:text-white transition-colors"
+      class="text-gray-700 dark:text-gray-300 group-hover:text-black dark:group-hover:text-white transition-colors hover:underline font-medium"
     >
       {post.data.title}
     </span>
   </div>
   <div>
-    {
-      post.data.language === 'zh-cn' && (
-        <span class="text-xs text-white dark:text-black bg-gray-400 group-hover:bg-gray-800 dark:group-hover:bg-gray-50 pl-[3px] mr-2 transition-colors">
-          CHINESE
-        </span>
-      )
-    }
+    <span
+      class="text-xs text-white dark:text-black bg-gray-400 group-hover:bg-gray-800 dark:group-hover:bg-gray-50 pl-[3px] mr-2 transition-colors"
+    >
+      {
+        post.data.language === 'zh-cn'
+          ? '中'
+          : post.data.language === 'en'
+          ? 'En'
+          : 'Bi'
+      }
+    </span>
     <span
       class="text-gray-400 group-hover:text-gray-800 dark:group-hover:text-gray-50 transition-colors"
     >
