--- a/src/components/blog/BlogItem.astro
+++ b/src/components/blog/BlogItem.astro
@@ -40,7 +40,7 @@ const { post } = Astro.props;
           ? '中'
           : post.data.language === 'en'
           ? 'En'
-          : 'Bi'
+          : 'Bilingual'
       }
     </span>
     <span
