--- a/src/components/layout/HeaderLink.astro
+++ b/src/components/layout/HeaderLink.astro
@@ -9,6 +9,17 @@ const removeAllSlash = (path: string) => {
 };
 const isCurrentPath =
   removeAllSlash(Astro.url.pathname) === removeAllSlash(`${href}`);
+
+const toHeaderMenu = (href: string) => {
+  const path = href.toLowerCase();
+  if (path === '/' || path === '/home') {
+    return 'Home';
+  }
+  return (
+    href.replaceAll('/', '').charAt(0).toUpperCase() +
+    href.replaceAll('/', '').slice(1)
+  );
+};
 ---
 
 <a
@@ -17,5 +28,5 @@ const isCurrentPath =
     isCurrentPath
       ? 'text-white dark:text-white font-semibold underline'
       : 'text-black dark:text-gray-400 hover:text-blue-600 dark:hover:text-blue-700 transition-colors font-semibold',
-  ]}>{Astro.slots.has('default') ? <slot /> : href}</a
+  ]}>{Astro.slots.has('default') ? <slot /> : toHeaderMenu(href)}</a
 >
