--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -23,17 +23,17 @@ const ISODate = post.data.date.toISOString();
   article={{ tags: post.data.tags, date: ISODate }}
   language={post.data.language}
 >
-  <h1 class="text-center font-bold text-4xl dark:text-white">
+  <h1 class="text-center font-bold text-4xl dark:text-white pt-3">
     {post.data.title}
   </h1>
-  <div class="block text-center text-gray-400 mb-2 text-sm mt-2">
+  <div class="block text-center text-gray-400 mb-2 text-sm mt-2 font-semibold">
     <time datetime={ISODate}>{post.data.date.toDateString()}</time>
     <span>-</span>
     <span>
       {
         post.data.tags.map((tag) => (
           <a
-            class="hover:text-gray-300 dark:hover:text-gray-500 transition-colors"
+            class="hover:text-blue-700 dark:hover:text-gray-500 transition-colors"
             href={'/blog?tag=' + tag}
           >
             {tag}
