--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -45,7 +45,7 @@ const {
         image: { alt: 'Zuxing Blog Header Image' },
         optional: { description, siteName: SITE_NAME },
         article: {
-          authors: article && ['Justin Sun'],
+          authors: article && ['Zuxing Wu'],
           publishedTime: article?.date,
           tags: article?.tags,
         },
@@ -63,6 +63,10 @@ const {
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@400;500;600;700;900&display=swap"
       rel="stylesheet"
     />
   </head>
