--- a/src/components/Comment.astro
+++ b/src/components/Comment.astro
@@ -1,19 +1,21 @@
 <div class="mt-4">
-  <giscus-widget
-    repo="jsun969/jsundotlol"
-    repoid="R_kgDOI1tkyA"
-    category="Announcements"
-    categoryid="DIC_kwDOI1tkyM4CT3uY"
-    mapping="pathname"
-    strict="0"
-    reactionsenabled="1"
-    emitmetadata="0"
-    inputposition="top"
-    theme="preferred_color_scheme"
-    lang="en"
-    loading="lazy"
+  <script
+    src="https://giscus.app/client.js"
+    data-repo="ZuxingGit/ZuxingBlog"
+    data-repo-id="R_kgDOQpEXxw"
+    data-category="Announcements"
+    data-category-id="DIC_kwDOQpEXx84C0GyQ"
+    data-mapping="pathname"
+    data-strict="0"
+    data-reactions-enabled="1"
+    data-emit-metadata="0"
+    data-input-position="bottom"
+    data-theme="preferred_color_scheme"
+    data-lang="en"
+    data-loading="lazy"
     crossorigin="anonymous"
-    async></giscus-widget>
+    async
+  ></script>
 </div>
 
 <script>
