--- a/src/components/layout/Footer.astro
+++ b/src/components/layout/Footer.astro
@@ -7,6 +7,6 @@
     />
   </a>
   <span class="text-center text-gray-400 py-2 text-sm">
-    2020-{new Date().getFullYear()} &copy; Yeyang (Justin) Sun
+    2025-{new Date().getFullYear()} &copy; Zuxing Wu
   </span>
 </footer>
