--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,17 +1,20 @@
 ---
 import Layout from '../layouts/Layout.astro';
 
-const zeroOrOne = () => {
-  return Math.round(Math.random());
+const zeroOrOneOrTwo = () => {
+  return Math.round(Math.random()) * 2;
 };
 
 const lol =
-  ['L', 'l'][zeroOrOne()] + ['O', 'o'][zeroOrOne()] + ['L', 'l'][zeroOrOne()];
+  ['B', 'b', '🅱'][zeroOrOneOrTwo()] +
+  ['L', 'l', 'ℒ'][zeroOrOneOrTwo()] +
+  ['O', 'o', 'Ó'][zeroOrOneOrTwo()] +
+  ['G', 'g', '𝕘'][zeroOrOneOrTwo()];
 ---
 
 <Layout>
   <h1 class="text-center text-5xl sm:text-9xl pt-[36dvh] sm:pt-[30dvh]">
-    <span class="font-bold dark:text-white">Jsun Dot</span>
+    <span class="font-bold dark:text-white">Zuxing's</span>
     <span
       class="font-extrabold bg-clip-text text-transparent bg-gradient-to-br from-[#ff5ef7] to-[#02f5ff]"
     >
