--- a/src/pages/friends.astro
+++ b/src/pages/friends.astro
@@ -8,7 +8,7 @@ import { randomSortArray } from '../utils/randomSortArray';
 ---
 
 <Layout title="Friends">
-  <div class="mb-4 text-sm dark:text-white">
+  <div class="mb-4 text-sm dark:text-white pt-1">
     <span
       class="text-xs font-bold text-white dark:text-black bg-black dark:bg-white pl-[3px] mr-2"
     >
@@ -16,7 +16,7 @@ import { randomSortArray } from '../utils/randomSortArray';
     </span>
     <span>Want your website to appear here? Just send a PR to</span>
     <Link
-      href="https://github.com/jsun969/jsundotlol/blob/main/src/content/_friends.json"
+      href="https://github.com/ZuxingGit/ZuxingBlog/blob/main/src/content/_friends.json"
     >
       this file
     </Link>
