--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,10 +5,10 @@ const zeroOrOneOrTwo = () => {
   return Math.round(Math.random()) * 2;
 };
 
-const lol =
+const blog =
   ['B', 'b', '🅱'][zeroOrOneOrTwo()] +
   ['L', 'l', 'ℒ'][zeroOrOneOrTwo()] +
-  ['O', 'o', 'Ó'][zeroOrOneOrTwo()] +
+  ['O', '𝓞', 'Ó'][zeroOrOneOrTwo()] +
   ['G', 'g', '𝕘'][zeroOrOneOrTwo()];
 ---
 
@@ -18,7 +18,7 @@ const lol =
     <span
       class="font-extrabold bg-clip-text text-transparent bg-gradient-to-br from-[#ff5ef7] to-[#02f5ff]"
     >
-      {lol}
+      {blog}
     </span>
   </h1>
 </Layout>
