--- a/src/components/layout/HeaderLink.astro
+++ b/src/components/layout/HeaderLink.astro
@@ -26,7 +26,7 @@ const toHeaderMenu = (href: string) => {
   href={href.toLowerCase()}
   class:list={[
     isCurrentPath
-      ? 'text-white dark:text-white font-semibold underline'
+      ? 'text-white dark:text-white font-semibold underline text-lg'
       : 'text-black dark:text-gray-400 hover:text-blue-600 dark:hover:text-blue-700 transition-colors font-semibold',
   ]}>{Astro.slots.has('default') ? <slot /> : toHeaderMenu(href)}</a
 >
