--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -3,47 +3,27 @@ import Comment from '../components/Comment.astro';
 import Link from '../components/Link.astro';
 import Layout from '../layouts/Layout.astro';
 
-const lastModifiedDate = new Date('2023-2-5');
+const lastModifiedDate = new Date('2025-12-22');
 ---
 
 <Layout title="About">
   <div class="dark:text-white space-y-4">
-    <h1 class="text-4xl font-bold">Hey, there! 👋</h1>
-    <h2 class="text-xl font-semibold">My name is Justin Sun / 孙烨阳</h2>
-    <p>
-      I am a frontend developer with a passion for
-      <Link href="https://github.com/jsun969">open source</Link>
-      from Shanghai. I love implementing my ideas in code and finding the best solution
-      in solving various problems.
+    <h1 class="text-4xl font-bold pt-1">Hey, there! 👋🏻</h1>
+    <h2 class="text-xl font-semibold">My name is Zuxing Wu / 吴足星</h2>
+
+    <p class="en">
+      Experienced and solution-oriented coder with a wide variety of
+      professional experiences. Adept at motivating myself and others,
+      passionate about data security and software optimisation, and always eager
+      to learn from those around me. Connect with me on
+      <Link href="https://www.linkedin.com/in/zuxingwu/">LinkedIn</Link>.
     </p>
-    <p>
-      I use
-      <Link href="https://code.visualstudio.com/">VSCode</Link>
-      as my code editor and like to use
-      <Link href="https://www.typescriptlang.org/">Typescript</Link>
-      and
-      <Link href="https://reactjs.org/">React</Link>
-      for web development. Besides that, I can use many other cutting-edge technology
-      stacks in projects. For instance, I used
-      <Link href="https://astro.build/">Astro</Link>
-      for this website.
+
+    <p class="zh">
+      我是一名经验丰富、以解决方案为导向的开发者，擅长激励自我与团队，热衷于数据安全与软件优化，并始终乐于向身边的人学习。欢迎通过
+      <Link href="https://www.linkedin.com/in/zuxingwu/">领英</Link>联系我。
     </p>
-    <p>
-      Besides programming, I like playing video games like
-      <Link href="https://www.minecraft.net/">Minecraft</Link>
-      and
-      <Link href="https://dead-cells.com/">Dead Cells</Link>
-      . While I am not good at FPS games. Feel free to suggest various games to me
-      and hope to play with you!
-    </p>
-    <p>
-      Thank you for reading this post about me. You can add my
-      <Link href="https://discord.gg/Q7xZVtF6pF">discord server</Link>
-      to chat with me. Also, check out my
-      <Link href="/blog">blog</Link>
-      to see many posts I have shared on programming and gaming. I hope you will
-      have a good time reading them!
-    </p>
+
     <div class="text-end text-sm">
       Last Modified:
       <time datetime={lastModifiedDate.toISOString()}>
