--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -26,7 +26,7 @@ const posts = (
       <>
         {post.data.date.getFullYear() <
           (posts[i - 1]?.data.date.getFullYear() || 99999) && (
-          <div class="font-extrabold text-blue-300 text-9xl sm:text-[15rem] relative -z-10 select-none dark:text-gray-500">
+          <div class="font-black text-blue-300 text-9xl sm:text-[16rem] relative -z-10 select-none dark:text-gray-500">
             {post.data.date.getFullYear()}
           </div>
         )}
