--- a/src/pages/friends.astro
+++ b/src/pages/friends.astro
@@ -14,7 +14,7 @@ import { randomSortArray } from '../utils/randomSortArray';
     >
       RANDOM ORDER
     </span>
-    <span>Want your website to appear here? Just send a PR to</span>
+    <span>Want your website to appear here? Just send a Pull Request to</span>
     <Link
       href="https://github.com/ZuxingGit/ZuxingBlog/blob/main/src/content/_friends.json"
     >
