--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -4,7 +4,7 @@ import HeaderLink from './HeaderLink.astro';
 ---
 
 <header
-  class="flex flex-col sm:flex-row sm:justify-between sm:gap-6 py-4 sticky top-0 z-50 bg-blue-600/60 dark:bg-black/80 backdrop-blur-sm shadow-sm"
+  class="flex flex-col sm:flex-row sm:justify-between sm:gap-6 py-4 sticky top-0 z-50 bg-blue-600/60 dark:bg-slate-800/80 backdrop-blur-sm shadow-sm"
 >
   <div class="flex justify-between sm:gap-6 px-4">
     {basePages.map((link) => <HeaderLink href={link} />)}
